renamed code/files pastie_packer -> pastiepacker

--- a/test/fixtures/private_pastie.html
+++ b/test/fixtures/private_pastie.html
@@ -132,7 +132,7 @@ if (logged_in_user && logged_in_user=="")
 
 
 
-<h2>about:pastie_packer </h2>
+<h2>about:pastiepacker </h2>
 
 
 
@@ -151,7 +151,7 @@ if (logged_in_user && logged_in_user=="")
 
 			</td>
 		<td>
-		<pre class="textmate-source"><pre class="sunburst"><span class='meta meta_paragraph meta_paragraph_text'>Files for pastie_packer uploaded by pastie_packer.
+		<pre class="textmate-source"><pre class="sunburst"><span class='meta meta_paragraph meta_paragraph_text'>Files for pastiepacker uploaded by pastiepacker.
 To unpack files see <span class='markup markup_underline markup_underline_link'>http://pastiepacker.rubyforge.org</span>
 </pre></pre>
 		</td>
