--- a/website/index.html
+++ b/website/index.html
@@ -92,13 +92,13 @@
                           c++, css, diff, html_rails, html, 
                           javascript, php, plain_text, python, 
                           ruby, ruby_on_rails, sql, shell-unix-generic
-                          Ignored for unpacking
                           Default: ruby
 -m, --message=MESSAGE     Promotional passage for your pastie
-                          Default: standard 'about' message
 -p, --private             Posted pasties are private
                           Ignored for unpacking
-                          Default: false
+-s, --stdout              Prints packed pasties instead of posting
+-H, --no-header           Prevents placing pastiepacker promotion in pasties
+                          That is, no 'about:' section is added to the top of pasties
 -h, --help                Show this help message.                                     
 </pre>
 
