fixed git instructions; added git instructions to CONTRIBUTIONS in README

--- a/website/index.html
+++ b/website/index.html
@@ -141,6 +141,7 @@
 
 
 	<pre><code>git clone git://github.com/drnic/pastie-packer.git pastiepacker
+cd pastiepacker
 rake install_gem</code></pre>
 
 
