--- a/website/index.html
+++ b/website/index.html
@@ -145,6 +145,14 @@ cd pastiepacker
 rake install_gem</code></pre>
 
 
+	<p>It is also available via rubyforge.org:</p>
+
+
+	<pre><code>git clone git://rubyforge.org/pastiepacker.git
+cd pastiepacker
+rake install_gem</code></pre>
+
+
 	<p>Or, you can unpack the 1.0.0 release of the pastiepacker from its <a href="http://pastie.caboo.se/175886">own pastie</a>!</p>
 
 
@@ -159,7 +167,7 @@ rake install_gem</code></pre>
 
 	<p>Comments are welcome. Send an email to <a href="mailto:drnicwilliams@gmail.com">Dr Nic Williams</a> via the <a href="http://groups.google.com/group/pastiepacker">forum</a></p>
     <p class="coda">
-      <a href="drnicwilliams@gmail.com">Dr Nic Williams</a>, 6th April 2008<br>
+      <a href="drnicwilliams@gmail.com">Dr Nic Williams</a>, 8th April 2008<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
